@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-22T01:47:35Z",
+  "timestamp" : "2022-09-22T08:23:58Z",
   "count_outdated" : 529,
   "uniques_outdated" : 306,
   "count" : 563,
-  "uniques" : 324,
+  "uniques" : 325,
   "clones" : [
     {
       "timestamp": "2022-09-08T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-09-21T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
