@@ -1,3 +1,11 @@
+2022-09-22T08:23:58Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3103914256
+* notice: last 14d: unq all: 5 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 306 529 / 324 563
+* notice: next accum: outdated-unq outdated-all / unq all: 306 529 / 325 563
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-08 2022-09-22]
+
 2022-09-22T01:47:35Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3102302859
 * notice: last 14d: unq all: 5 34
